--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                 <div class="navbar-header">
                    
-                    <a class="site-title"><span>Agency</span>Perfect</a>
+<!--                    <a class="site-title"><span>Agency</span>Perfect</a>-->
 
                 </div><!-- /.navbar-header -->
 
@@ -84,9 +84,9 @@
     <div id="hero" class="hero overlay">
         <div class="hero-content">
             <div class="hero-text">
-                <h1>Your story begins from here.</h1>
-                <p>Your clients on the internet. Learn how to receive them.</p>
-                <a href="#" class="btn btn-border">Learn more</a>
+                <h1>Richard Serrano</h1>
+                <p>Resume - Portfolio - Gallery</p>
+                <a href="#main" class="btn btn-border">Learn more</a>
             </div><!-- /.hero-text -->
         </div><!-- /.hero-content -->
     </div><!-- /.hero -->
